core-talos/03-gitops/components/services/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  annotations:
    lbipam.cilium.io/ips: 192.168.8.17
spec:
  type: LoadBalancer
  selector:
    app: jellyfin
  ports:
    - {name: http, port: 8096, targetPort: http}
